--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.18.1",
     "init": "^0.1.2",
     "mongoose": "^6.4.4",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   }
 }
