--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "init": "^0.1.2",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19",
+    "redis": "^3.1.2",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   }
